--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
             I have been a student athlete my whole academic carree and this has given me great time manegment skills. 
             Before college I was homeschooled, this has given a uniqe abilty to teach and motivate myself.
             I look forward to hearing what you think of my work. </p>
-        <img class="spbottle" src="images/sp.png" alt="picture of girl sitting with soccerball">  
+        <img class="sp" src="images/SPpanel-01.png" alt="picture of girl sitting with soccerball">  
 
         <img class="dogtreat" src="images/bag.png" alt="Mockup of dog treat bag">
             <li><h2> Hard skills </h2>
@@ -40,12 +40,13 @@
                     <ul> Witty (intermediate)</ul>
                     <ul> Self Motivated (advanced)</ul>
                 </li>
-        <img class="spbottle" src="images/drink.png" alt="mockup of strawberry soda">
-        <li><h2> EDUCATION </h2>
-            <p class="education">
-                <ul> Wake tech Community College</ul>
-                <ul> Academic Achivments: 2021 Academic team </ul>
-            </p></li>
+              
+                    <p class="education">
+                        <li><h2> EDUCATION </h2>
+                        <ul> Wake tech Community College</ul>
+                        <ul> Academic Achivments: 2021 Academic team </ul>
+                    </p></li>
+        <img class="bottle" src="images/drink.png" alt="mockup of strawberry soda">
 </body>
 <footer>
     <h4> Let's Get in Touch</h4>
