--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,21 @@
     <title> Atalya Sigler</title>
     <link rel="stylesheet" href="home-page.css">
 </head> 
-    <nav class="navigation">
-        <li> <ul>Home</ul>
-            <ul>2022 Design Portfolio</ul>
-            <ul> 2022 Photagraphy Portfolio</ul>
-        </li>
+<header class="menu-wrap">
+    <input type="checkbox" id="checkbox">                                  
+    <nav>
+    <ul>
+    <li><a href="#">Home</a> </li>
+    <li><a href="#">2022 Design Portfolio</a> </li>
+    <li><a href="#">2022 Photoagraphy Portfolio</a> </li>
+    <li><a href="#">Contact</a> </li>
+    </ul>
     </nav>
+    <label for="checkbox" class="menu-icon">☰</label>        
+    </header>
+    <section>
+    <h1>Atalya Sigler</h1>
+    </section>
 
 <body>
     
